codeclimate config ja gradleTutorialia

--- a/gradleTutorial/build.gradle
+++ b/gradleTutorial/build.gradle
@@ -18,3 +18,11 @@ mainClassName = 'Main'
 run {
     standardInput = System.in
 }
+
+repositories {
+    jcenter()
+}
+
+dependencies {
+    testCompile 'junit:junit:4.12'
+}
